2014-09-29  Brian J. Burg  <burg@cs.washington.edu>

        Web Inspector: InjectedScripts should not be profiled or displayed in Timeline
        https://bugs.webkit.org/show_bug.cgi?id=136806

        Reviewed by Timothy Hatcher.

        It doesn't make sense to show profile nodes for injected scripts when profiling user content.
        For now, omit nodes by suspending profiling before and after executing injected scripts.

        * profiler/LegacyProfiler.cpp:
        (JSC::LegacyProfiler::suspendProfiling): Added.
        (JSC::LegacyProfiler::unsuspendProfiling): Added.
        * profiler/LegacyProfiler.h:
        * profiler/ProfileGenerator.cpp: Add isSuspended() flag, remove unused typedef.
        (JSC::ProfileGenerator::ProfileGenerator):
        (JSC::ProfileGenerator::willExecute):
        (JSC::ProfileGenerator::didExecute):
        * profiler/ProfileGenerator.h:
        (JSC::ProfileGenerator::setIsSuspended): Added.

2014-09-29  Brian J. Burg  <burg@cs.washington.edu>

        Web Inspector: InspectorValues should use references for out parameters
        https://bugs.webkit.org/show_bug.cgi?id=137190

        Reviewed by Joseph Pecoraro.

        Use references for out parameters in asType() and getType() methods.
        Also convert to references in some miscellaneous code where we don't
        expect or handle null values.

        Remove variants of asObject() and asArray() that return a nullable RefPtr.
        Now, client code is forced to use out parameters and check for cast failure.

        Iron out control flow in some functions and fix some style issues.

        * inspector/InjectedScript.cpp:
        (Inspector::InjectedScript::getFunctionDetails):
        (Inspector::InjectedScript::wrapObject):
        (Inspector::InjectedScript::wrapTable):
        * inspector/InjectedScriptBase.cpp:
        (Inspector::InjectedScriptBase::makeEvalCall):
        * inspector/InjectedScriptManager.cpp: