@@ -1,3 +1,15 @@
+2014-09-30  Oliver Hunt  <oliver@apple.com>
+
+        Fix C API header
+        https://bugs.webkit.org/show_bug.cgi?id=137254
+        <rdar://problem/18487528>
+
+        Build fix
+
+        Guard extern "C" behind __cplusplus ifdef
+
+        * API/JSBase.h:
+
 2014-09-29  Brian J. Burg  <burg@cs.washington.edu>
 
         Web Inspector: InjectedScripts should not be profiled or displayed in Timeline
